--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,41 +1,23 @@
-<!-- <mat-toolbar color="primary">
-  <mat-toolbar-row>
-    <span>MyMaterial</span>
-
-    <span class="example-spacer"></span>
-    
-    <button mat-button routerLink="/checkout">Checkout</button>
-    <button mat-button routerLink="/orderconfirm">Order Confirm</button>
-    <button mat-button routerLink="/home">Home</button>
-  </mat-toolbar-row>
-</mat-toolbar> -->
-
 <div id="flipkart-navbar">
   <div class="container">
       <div class="row">
           <ul class="col-md-12 ">
-              <li class="upper-links "><a class="links" href="http://clashhacks.in/">Link 1</a></li>
-              <li class="upper-links"><a class="links" href="https://campusbox.org/">Link 2</a></li>
-              <li class="upper-links"><a class="links" href="http://clashhacks.in/">Link 3</a></li>
-              <li class="upper-links"><a class="links" href="http://clashhacks.in/">Link 4</a></li>
-              <li class="upper-links"><a class="links" href="http://clashhacks.in/">Link 5</a></li>
-              <li class="upper-links"><a class="links" href="http://clashhacks.in/">Link 6</a></li>
+              <li class="upper-links "><a class="links" href="#">Today's Deal</a></li>
+              <li class="upper-links"><a class="links" href="#">Report</a></li>
+              <li class="upper-links"><a class="links" href="#">Customer Service</a></li>
               <li class="upper-links  pull-right">
-                  <a class="links" href="http://clashhacks.in/">
+                  <a class="links" href="#">
                       <svg class="" width="16px" height="12px" style="overflow: visible;">
                           <path d="M8.037 17.546c1.487 0 2.417-.93 2.417-2.417H5.62c0 1.486.93 2.415 2.417 2.415m5.315-6.463v-2.97h-.005c-.044-3.266-1.67-5.46-4.337-5.98v-.81C9.01.622 8.436.05 7.735.05 7.033.05 6.46.624 6.46 1.325v.808c-2.667.52-4.294 2.716-4.338 5.98h-.005v2.972l-1.843 1.42v1.376h14.92v-1.375l-1.842-1.42z" fill="#fff"></path>
                       </svg>
                   </a>
               </li>
-              <li class="upper-links dropdown  pull-right"><a class="links" href="http://clashhacks.in/">Dropdown</a>
+              <li class="upper-links dropdown  pull-right"><a class="links" href="#">Profile</a>
                   <ul class="dropdown-menu">
-                      <li class="profile-li"><a class="profile-links" href="http://yazilife.com/">Link</a></li>
-                      <li class="profile-li"><a class="profile-links" href="http://hacksociety.tech/">Link</a></li>
-                      <li class="profile-li"><a class="profile-links" href="http://clashhacks.in/">Link</a></li>
-                      <li class="profile-li"><a class="profile-links" href="http://clashhacks.in/">Link</a></li>
-                      <li class="profile-li"><a class="profile-links" href="http://clashhacks.in/">Link</a></li>
-                      <li class="profile-li"><a class="profile-links" href="http://clashhacks.in/">Link</a></li>
-                      <li class="profile-li"><a class="profile-links" href="http://clashhacks.in/">Cart</a></li>
+                      <li class="profile-li"><a class="profile-links" href="#">Your Account</a></li>
+                      <li class="profile-li"><a class="profile-links" href="#">Your Order</a></li>
+                      <li class="profile-li"><a class="profile-links" href="#">Help</a></li>
+                      <li class="profile-li"><a class="profile-links" href="#">Sign Out</a></li>
                   </ul>
               </li>
           </ul>
