Added product details

--- a/src/app/components/shoping-home/shoping-home.component.html
+++ b/src/app/components/shoping-home/shoping-home.component.html
@@ -33,7 +33,7 @@
                     <i class="fa fa-shopping-cart"></i>
                     Add to cart
                   </p>
-                  <p class="btn-details">
+                  <p class="btn-details" routerLink="/product/{{product.id}}">
                     <i class="fa fa-list"></i>
                    More details
                   </p>
