--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -5,23 +5,23 @@
         <div class="preview col-md-6">
           
           <div class="preview-pic tab-content">
-            <div class="tab-pane active" id="pic-1"><img src="http://placekitten.com/400/252" /></div>
-            <div class="tab-pane" id="pic-2"><img src="http://placekitten.com/400/252" /></div>
-            <div class="tab-pane" id="pic-3"><img src="http://placekitten.com/400/252" /></div>
-            <div class="tab-pane" id="pic-4"><img src="http://placekitten.com/400/252" /></div>
-            <div class="tab-pane" id="pic-5"><img src="http://placekitten.com/400/252" /></div>
+            <div class="tab-pane active" id="pic-1"><img src="./assets/images/{{product._id}}.jpg" /></div>
+            <div class="tab-pane" id="pic-2"><img src="./assets/images/{{product._id}}.jpg" /></div>
+            <div class="tab-pane" id="pic-3"><img src="./assets/images/{{product._id}}.jpg" /></div>
+            <div class="tab-pane" id="pic-4"><img src="./assets/images/{{product._id}}.jpg" /></div>
+            <div class="tab-pane" id="pic-5"><img src="./assets/images/{{product._id}}.jpg" /></div>
           </div>
           <ul class="preview-thumbnail nav nav-tabs">
-            <li class="active"><a data-target="#pic-1" data-toggle="tab"><img src="http://placekitten.com/200/126" /></a></li>
-            <li><a data-target="#pic-2" data-toggle="tab"><img src="http://placekitten.com/200/126" /></a></li>
-            <li><a data-target="#pic-3" data-toggle="tab"><img src="http://placekitten.com/200/126" /></a></li>
-            <li><a data-target="#pic-4" data-toggle="tab"><img src="http://placekitten.com/200/126" /></a></li>
-            <li><a data-target="#pic-5" data-toggle="tab"><img src="http://placekitten.com/200/126" /></a></li>
+            <li class="active"><a data-target="#pic-1" data-toggle="tab"><img src="./assets/images/{{product._id}}.jpg" /></a></li>
+            <li><a data-target="#pic-2" data-toggle="tab"><img src="./assets/images/{{product._id}}.jpg" /></a></li>
+            <li><a data-target="#pic-3" data-toggle="tab"><img src="./assets/images/{{product._id}}.jpg" /></a></li>
+            <li><a data-target="#pic-4" data-toggle="tab"><img src="./assets/images/{{product._id}}.jpg" /></a></li>
+            <li><a data-target="#pic-5" data-toggle="tab"><img src="./assets/images/{{product._id}}.jpg" /></a></li>
           </ul>
           
         </div>
         <div class="details col-md-6">
-          <h3 class="product-title">men's shoes fashion</h3>
+          <h3 class="product-title">{{product?.name}}</h3>
           <div class="rating">
             <div class="stars">
               <span class="fa fa-star checked"></span>
@@ -32,23 +32,19 @@
             </div>
             <span class="review-no">41 reviews</span>
           </div>
-          <p class="product-description">Suspendisse quos? Tempus cras iure temporibus? Eu laudantium cubilia sem sem! Repudiandae et! Massa senectus enim minim sociosqu delectus posuere.</p>
-          <h4 class="price">current price: <span>$180</span></h4>
-          <p class="vote"><strong>91%</strong> of buyers enjoyed this product! <strong>(87 votes)</strong></p>
-          <h5 class="sizes">sizes:
-            <span class="size" data-toggle="tooltip" title="small">s</span>
-            <span class="size" data-toggle="tooltip" title="medium">m</span>
-            <span class="size" data-toggle="tooltip" title="large">l</span>
-            <span class="size" data-toggle="tooltip" title="xtra large">xl</span>
-          </h5>
+          <p class="product-description">{{product?.description}}</p>
+          <h4 class="price">current price: <span>{{product.price|currency:'INR'}}</span></h4>
+          <p class="vote"><strong>78</strong> of buyers enjoyed this product! <strong>(78 votes)</strong></p>
+         
           <h5 class="colors">colors:
             <span class="color orange not-available" data-toggle="tooltip" title="Not In store"></span>
             <span class="color green"></span>
             <span class="color blue"></span>
           </h5>
+
           <div class="action">
-            <button class="add-to-cart btn btn-default" type="button">add to cart</button>
-            <button class="like btn btn-default" type="button"><span class="fa fa-heart"></span></button>
+            <button class="add-to-cart btn btn-default" type="button" (click)="addtoCart()">add to cart</button>
+           
           </div>
         </div>
       </div>
