--- a/src/app/components/shoping-home/shoping-home.component.css
+++ b/src/app/components/shoping-home/shoping-home.component.css
@@ -9,6 +9,7 @@
 
 .photo{
     text-align: center;
+    overflow: hidden;
 }
 .col-item .photo img
 {
@@ -113,3 +114,20 @@
 .container-fluid{
     padding:1em;
 }
+
+@media screen and (min-width: 400px) and (max-width: 1000px ) {
+.side-filters{
+    display:none;
+}
+}
+
+.accesoriesLink {
+    transform:rotate(7deg);
+    -ms-transform:rotate(90deg); 
+    -moz-transform:rotate(90deg); 
+    -webkit-transform:rotate(90deg); 
+    position: fixed;
+    right: -30px;
+    top: 50%;
+}
+
