--- a/src/app/components/shoping-home/shoping-home.component.html
+++ b/src/app/components/shoping-home/shoping-home.component.html
@@ -1,30 +1,24 @@
 
   <div class="container-fluid">
   <div class="row">
-    <div class="col-md-2">
+    <div class="col-md-2 side-filters">
       
   <app-shoping-filters class="side-filters"></app-shoping-filters> 
     </div>
 
-    <div class="col-md-10" >
+    <div class="col-md-12 col-lg-10 col-sm-12" >
       <div class="row">
-        <div class="col-md-4 col-sm-6 col-lg-3" *ngFor="let product of products">
+        <div class="col-md-4 col-sm-6 col-lg-3 product" *ngFor="let product of products">
             <div class="col-item">
                 <div class="rating hidden-sm col-md-6 pull-right">
-                    <i class="price-text-color fa fa-star"></i>
-                    <i class="price-text-color fa fa-star">
-                    </i>
-                    <i class="price-text-color fa fa-star"></i>
-                    <i class="price-text-color fa fa-star">
-                    </i>
-                    <i class="fa fa-star"> </i>
+                   
                   </div> 
               <div class="photo">
-                <img src="./assets/images/{{product.id}}.jpg" class="img-responsive" alt="a" />
+                <img src="./assets/images/{{product._id}}.jpg"  class="img-responsive" alt="a" />
               </div>
               <div class="info">
                   <span class="price">Rs. {{product.price}}</span>
-                  <h5> {{product.name}}</h5>
+                  <h5 class="truncate"> {{product.name}}</h5>
                   <p>Model is awesome</p>
                   
                  
@@ -33,7 +27,7 @@
                     <i class="fa fa-shopping-cart"></i>
                     Add to cart
                   </p>
-                  <p class="btn-details" routerLink="/product/{{product.id}}">
+                  <p class="btn-details" routerLink="/product/{{product._id}}">
                     <i class="fa fa-list"></i>
                    More details
                   </p>
@@ -48,5 +42,14 @@
     </div>
 
   </div>
+
+</div>
+
+<div class="container-fluid">
+  <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary accesoriesLink" (click)="showAccessories()" data-toggle="modal" data-target="#exampleModal">
+    Acessories
+  </button>
+  <app-accesories></app-accesories>
 
 </div>
