--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,9 @@
     overflow: hidden;
     text-overflow: ellipsis;
   }
+
+  .disable{
+    opacity: .5;
+    pointer-events: none;
+    color:red;
+  }
